--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,16 +24,8 @@ jobs:
           distribution: 'corretto'
           cache: 'maven'
 
-      - name: Set up Docker Compose
-        run: |
-          sudo curl -L "https://github.com/docker/compose/releases/download/v2.23.0/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
-          sudo chmod +x /usr/local/bin/docker-compose
-
-      - name: Build with Docker Compose
-        run: docker-compose build
-
-      - name: Start Docker Compose services
-        run: docker-compose up
+      - name: Build and run tests with Maven
+        run: mvn clean test
 
       - name: Attach screenshots
         if: failure()
@@ -49,8 +41,6 @@ jobs:
         with:
           ref: gh-pages
           path: gh-pages
-
-
 
       - name: Build Allure report
         uses: simple-elf/allure-report-action@master
@@ -72,7 +62,3 @@ jobs:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
-
-      - name: Stop Docker Compose services
-        if: always()
-        run: docker-compose down
