--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: Java CI with Maven (Java 21)
 
 on:
   pull_request:
@@ -10,22 +10,22 @@ on:
 
 jobs:
   build:
-    name: 'Run tests'
+    name: 'Run tests with Java 21'
     runs-on: ubuntu-latest
 
     steps:
       - name: Git clone
         uses: actions/checkout@v4
 
-      - name: Setup JDK 17
+      - name: Setup JDK 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
+          java-version: '21'
           distribution: 'corretto'
           cache: 'maven'
 
       - name: Build and run tests with Maven
-        run: mvn clean test
+        run: mvn -B clean test
 
       - name: Attach screenshots
         if: failure()
@@ -55,10 +55,10 @@ jobs:
       - name: Check Allure results
         run: ls -la target/allure-results
 
-      - name: Publish Allure report to Github Pages
+      - name: Publish Allure report to GitHub Pages
         if: ${{ success() || failure() }}
-        uses: peaceiris/actions-gh-pages@v2
-        env:
-          PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PUBLISH_BRANCH: gh-pages
-          PUBLISH_DIR: allure-history
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_branch: gh-pages
+          publish_dir: allure-history
