--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
 
       # 3. Run tests (not stop workflow if failure )
       - name: Build and run tests with Maven
-        run: mvn -B clean test || true
+        run: mvn -B -e clean test || true
 
       # 4. Output failed tests
       - name: Print failed tests
@@ -80,8 +80,15 @@ jobs:
       # 10. Publish  Allure to GitHub Pages
       - name: Publish Allure report to Github Pages
         if: always()
-        uses: peaceiris/actions-gh-pages@v2
+        uses: peaceiris/actions-gh-pages@v3
         env:
           PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PUBLISH_BRANCH: gh-pages
           PUBLISH_DIR: allure-history
+
+      - name: Upload Allure HTML report as artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: allure-report
+          path: allure-report
