--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
       # 3. Run tests (not stop workflow if failure )
       - name: Build and run tests with Maven
         run: mvn -B -e clean test -Dselenium.headless=true || true
+        env:
+          CHROME_OPTIONS: --remote-allow-origins=*;--disable-gpu;--no-sandbox;--disable-dev-shm-usage;--headless=new;--window-size=1920,1080
 
       # 4. Output failed tests
       - name: Print failed tests
